--- a/muklog/map/templates/home.html
+++ b/muklog/map/templates/home.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="naver-map"></div>
+    <div id="temp"></div>
   </body>
   <script
     type="text/javascript"
@@ -20,21 +21,44 @@
   ></script>
   <script>
     let map = null;
+    let temp = document.getElementById("temp");
     let marker = null;
+    let currentLocation = { lat: 37.3595704, lng: 127.105399 };
     function renderMap() {
       map = new naver.maps.Map("naver-map", {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
+        center: new naver.maps.LatLng(currentLocation.lat, currentLocation.lng),
         zoom: 14,
       });
       marker = new naver.maps.Marker({
-        position: new naver.maps.LatLng(37.3595704, 127.105399),
+        position: new naver.maps.LatLng(
+          currentLocation.lat,
+          currentLocation.lng
+        ),
         map,
       });
 
       let markerEl = marker.getElement();
       let listener = naver.maps.Event.addDOMListener(markerEl, "click", () => {
-        alert("여기는 네이버 그린 팩토리 입니다!!");
+        alert("여기는 현재위치 입니다!!");
       });
+    }
+
+    getLocation();
+
+    function getLocation() {
+      if (!navigator.geolocation) {
+        alert("이 브라우저에서는 HTML5가 지원하지 않습니다.");
+        return;
+      }
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          let { latitude, longitude } = position.coords;
+          currentLocation.lat = latitude;
+          currentLocation.lng = longitude;
+        },
+        (error) => console.log(error),
+        { maximumAge: 60000, timeout: 5000, enableHighAccuracy: true }
+      );
     }
   </script>
 </html>
