--- a/muklog/blog/templates/detail.html
+++ b/muklog/blog/templates/detail.html
@@ -1,4 +1,5 @@
 <h1>{{ detail.title }}</h1>
+<img src="{{detail.thumbnail.url}}" alt="thumbnail" width='600'>
 <p> {{ detail.pub_date }} </p>
 <p> {{ detail.body }} </p>
 <a href="{% url 'tempHome' %}">임시홈으로 돌아가기</a>
