--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -1,6 +1,9 @@
 {% for blog in blogs %}
-
+{% if blog.thumbnail %}
+<img width='600' src="{{ blog.thumbnail.url }}" alt="image">
+{% endif %}
 <h1>{{ blog.title }}</h1>
+<p>{{blog.pub_date}}</p>
 <p>{{ blog.summary }}</p>
 <a href="{% url 'detail' blog.id %}">더보기</a>
 <hr>
