--- a/muklog/blog/templates/write.html
+++ b/muklog/blog/templates/write.html
@@ -1,5 +1,6 @@
 <div>
-    <form action="{% url 'create' %}">
+    <form method='post' action="{% url 'create' %}" enctype="multipart/form-data">
+        {% csrf_token %}
         <h4>title: </h4>
         <input type="text" name="title">
         <br>
@@ -8,6 +9,8 @@
         <textarea cols="40" rows="10" name="body"></textarea>
         <br>
         <br>
+        <input type="file" name="image" id="imageUpload" accept="media/*">
         <input type="submit" value="submit">
     </form>
 </div>
+<!--  -->
