--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -1,10 +1,20 @@
-{% for blog in blogs %}
-{% if blog.thumbnail %}
-<img width='600' src="{{ blog.thumbnail.url }}" alt="image">
-{% endif %}
-<h1>{{ blog.title }}</h1>
-<p>{{blog.pub_date}}</p>
-<p>{{ blog.summary }}</p>
-<a href="{% url 'detail' blog.id %}">더보기</a>
-<hr>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+      <a href={% url 'write' %}>write~</a>
+    {% for blog in blogs %} {% if blog.thumbnail %}
+    <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
+    {% endif %}
+    <h1>{{ blog.title }}</h1>
+    <p>{{blog.pub_date}}</p>
+    <p>{{ blog.summary }}</p>
+    <a href="{% url 'detail' blog.id %}">더보기</a>
+    <hr />
+    {% endfor %}
+  </body>
+</html>
