--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -7,6 +7,12 @@
   </head>
   <body>
       <a href={% url 'write' %}>write~</a>
+      <!-- <form action="{% url 'login' %}" method="POST">
+        <input type="hidden" name="path" value={{request.path}}>
+        <input type="submit" value="login" id="">
+      </form> -->
+      <a href={% url 'login' %}>login~</a>
+      
     {% for blog in blogs %} {% if blog.thumbnail %}
     <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
     {% endif %}
