Add shared variables

--- a/muklog/map/templates/home.html
+++ b/muklog/map/templates/home.html
@@ -17,6 +17,7 @@
     <div id="naver-map"></div>
     <div id="temp"></div>
   </body>
+  <script type="module" src="{% static 'map/js/shared.js' %}"></script>
   <script type="module" src="{% static 'map/js/render.js' %}"></script>
   <script type="module" src="{% static 'map/js/marker.js' %}"></script>
   <script type="module" src="{% static 'map/js/main.js' %}"></script>
