--- a/muklog/map/templates/home.html
+++ b/muklog/map/templates/home.html
@@ -14,6 +14,7 @@
     </style>
   </head>
   <body>
+    <a href="{% url 'login' %}?next={{ request.path }}">login~</a>
     <div id="naver-map"></div>
     <div id="temp"></div>
   </body>
@@ -29,7 +30,9 @@
   <script type="module">
     import Marker from "../static/map/js/marker.js"
     import Main from "../static/map/js/main.js";
-    const main = new Main("{{ STATIC_URL }}") 
+    
+    const main = new Main("{{ STATIC_URL }}") ;
+    
     main.render();
   </script>
 </html>
