--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -11,7 +11,10 @@
         <input type="hidden" name="path" value={{request.path}}>
         <input type="submit" value="login" id="">
       </form> -->
-      <a href={% url 'login' %}>login~</a>
+      <a href={% url 'login' %}?next={{request.path}}>login~</a>
+      <script>
+
+      </script>
       
     {% for blog in blogs %} {% if blog.thumbnail %}
     <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
