--- a/muklog/map/templates/home.html
+++ b/muklog/map/templates/home.html
@@ -1,38 +1,22 @@
+{% extends 'mapTemplate.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      #naver-map {
-        width: 500px;
-        height: 500px;
-      }
-    </style>
-  </head>
-  <body>
-    <a href="{% url 'login' %}?next={{ request.path }}">login~</a>
-    <div id="naver-map"></div>
-    <div id="temp"></div>
-  </body>
+{% block module %}
   <script type="module" src="{% static 'map/js/shared.js' %}"></script>
   <script type="module" src="{% static 'map/js/render.js' %}"></script>
   <script type="module" src="{% static 'map/js/marker.js' %}"></script>
-  <script type="module" src="{% static 'map/js/main.js' %}"></script>
   <script type="module" src="{% static 'map/js/markerCluster.js' %}"></script>
-  <script
-    type="text/javascript"
-    src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId={{ naver_client_id }}"
-  ></script>
-  <script type="module">
-    import Marker from "../static/map/js/marker.js"
-    import Main from "../static/map/js/main.js";
-    
-    const main = new Main("{{ STATIC_URL }}") ;
-    
-    main.render();
-  </script>
-</html>
+{% endblock %}
+
+{% block content %}
+  <style>
+    #naver-map {
+      width: 500px;
+      height: 500px;
+    }
+  </style>
+
+  <a href="{% url 'login' %}?next={{ request.path }}">login~</a>
+  <div id="naver-map"></div>
+  <div id="temp"></div>
+{% endblock %}
