--- a/muklog/templates/mapTemplate.html
+++ b/muklog/templates/mapTemplate.html
@@ -10,25 +10,17 @@
   <body>
     <!-- body content -->
     {% block content %} 
-    {% endblock %} 
-
-    <!-- js module -->
-    {% block modules %} 
-    {% endblock %} 
-
-    <!-- naver api js -->
-    <script type="module" src="{% static 'map/js/render.js' %}"></script>
-    <script type="module" src="{% static 'map/js/main.js' %}"></script>
+    {% endblock %}
+    
     <script
       type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=qbtc7gdm2w"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId={{ naver_client_id }}"
     ></script>
-    <script type="module">
-      import Marker from "../static/map/js/marker.js"
-      import Main from "../static/map/js/main.js";
+    <script type="module"> 
+      import naverMap from "../static/map/js/naverMap.js";
       
-      const main = new Main("{{ STATIC_URL }}") ;
-      
+      const main = new naverMap("{{ STATIC_URL }}") ;
+
       main.render();
     </script>
   </body>
