--- a/muklog/blog/templates/detail.html
+++ b/muklog/blog/templates/detail.html
@@ -8,4 +8,5 @@
 <p> {{ detail.pub_date }} </p>
 <p> {{ detail.body }} </p>
 <a href="{% url 'edit' detail.id %}">수정하기</a>
+<a href="{% url 'delete' detail.id %}">삭제하기</a>
 <a href="{% url 'tempHome' %}">임시홈으로 돌아가기</a>
