--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-      <a href={% url 'write' %}>write~</a>
-      <!-- <form action="{% url 'login' %}" method="POST">
-        <input type="hidden" name="path" value={{request.path}}>
-        <input type="submit" value="login" id="">
-      </form> -->
-      <a href={% url 'login' %}?next={{request.path}}>login~</a>
-      <script>
 
-      </script>
-      
-    {% for blog in blogs %} {% if blog.thumbnail %}
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <a href={% url 'write' %}>write~</a>
+  <!-- 만약 로그인 했으면-->
+  {% if user.is_authenticated %}
+  <a href={% url 'logout' %}?next={{request.path}}>logout~</a>
+  <span>{{request.user}}님</span>
+  <div>
+    {% if messages %}
+    {% for message in messages %}
+    <p>{{ message.tag }}</p>
+    {% endfor %}
+    {% endif %}
+
+    {% for blog in blogs %}
+    {% if blog.thumbnail %}
     <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
     {% endif %}
+
     <h1>{{ blog.title }}</h1>
     <p>{{blog.pub_date}}</p>
     <p>{{ blog.summary }}</p>
     <a href="{% url 'detail' blog.id %}">더보기</a>
+    <a href="{% url 'edit' blog.id %}">수정하기</a>
+    <a href="{% url 'delete' blog.id %}">삭제하기</a>
     <hr />
     {% endfor %}
-  </body>
+  </div>
+
+  <!-- 로그인을 안했으면 -->
+  {% else %}
+  <a href={% url 'login' %}?next={{request.path}}>login~</a>
+  <p>로그인하여 글을 작성해주세요.</p>
+  {% endif %}
+  <script>
+
+  </script>
+
+</body>
+
 </html>
