--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -14,25 +14,30 @@
   <a href={% url 'logout' %}?next={{request.path}}>logout~</a>
   <span>{{request.user}}님</span>
   <div>
-    {% if messages %}
-    {% for message in messages %}
-    <p>{{ message.tag }}</p>
-    {% endfor %}
-    {% endif %}
+    <div>
+      {% if messages %}
+      {% for message in messages %}
+      {{ message.tags }}
+      {{ message.message }}
+      {% endfor %}
+      {% endif %}
+    </div>
+    <div>
+      {% for blog in blogs %}
+      {% if blog.thumbnail %}
+      <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
+      {% endif %}
 
-    {% for blog in blogs %}
-    {% if blog.thumbnail %}
-    <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
-    {% endif %}
+      <h1>{{ blog.title }}</h1>
+      <p>{{blog.pub_date}}</p>
+      <p>{{ blog.summary }}</p>
+      <a href="{% url 'detail' blog.id %}">더보기</a>
+      <a href="{% url 'edit' blog.id %}">수정하기</a>
+      <a href="{% url 'delete' blog.id %}">삭제하기</a>
+      <hr />
+      {% endfor %}
+    </div>
 
-    <h1>{{ blog.title }}</h1>
-    <p>{{blog.pub_date}}</p>
-    <p>{{ blog.summary }}</p>
-    <a href="{% url 'detail' blog.id %}">더보기</a>
-    <a href="{% url 'edit' blog.id %}">수정하기</a>
-    <a href="{% url 'delete' blog.id %}">삭제하기</a>
-    <hr />
-    {% endfor %}
   </div>
 
   <!-- 로그인을 안했으면 -->
