--- a/muklog/accounts/templates/signup.html
+++ b/muklog/accounts/templates/signup.html
@@ -1,4 +1,7 @@
 <div>
+    {% if error %}
+    {{error}}
+    {% endif %}
     <h1>회원가입</h1>
     <form action="{% url 'signup' %}" method="POST">
         {% csrf_token %}
@@ -8,7 +11,7 @@
         <br>
         Confirm Password: <input type="password" name="password2" id="">
         <br>
-        <!-- <input type="hidden" name="path" value={{request.path}}> -->
+        <input type="hidden" name="next" value={{next}}>
         <input type="submit" value="sign up">
     </form>
 </div>
