--- a/muklog/blog/templates/tempHome.html
+++ b/muklog/blog/templates/tempHome.html
@@ -13,16 +13,19 @@
   {% if user.is_authenticated %}
   <a href={% url 'logout' %}?next={{request.path}}>logout~</a>
   <span>{{request.user}}님</span>
+  <a href={% url 'mypage' user.username %}>마이페이지</a>
   <div>
+    <!-- {% if messages %}
+    {% for message in messages %}
+    {{ message.tags }}
+    {{ message }}
+    {% endfor %}
+    {% endif %} -->
+    {% if error %}
+    {{ error }}
+    {% endif %}
     <div>
-      {% if messages %}
-      {% for message in messages %}
-      {{ message.tags }}
-      {{ message.message }}
-      {% endfor %}
-      {% endif %}
-    </div>
-    <div>
+      {% if blogs %}
       {% for blog in blogs %}
       {% if blog.thumbnail %}
       <img width="600" src="{{ blog.thumbnail.url }}" alt="image" />
@@ -36,6 +39,7 @@
       <a href="{% url 'delete' blog.id %}">삭제하기</a>
       <hr />
       {% endfor %}
+      {% endif %}
     </div>
 
   </div>
@@ -43,6 +47,7 @@
   <!-- 로그인을 안했으면 -->
   {% else %}
   <a href={% url 'login' %}?next={{request.path}}>login~</a>
+  <a href={% url 'signup' %}?next={{request.path}}>회원가입 고!</a>
   <p>로그인하여 글을 작성해주세요.</p>
   {% endif %}
   <script>
