--- a/muklog/map/templates/home.html
+++ b/muklog/map/templates/home.html
@@ -3,27 +3,72 @@
 
 {% block content %}
   <style>
+    .container{
+      width:100%;
+      height:100%;
+    }
     #naver-map {
-      width: 500px;
-      height: 500px;
+      width:99vw;
+      height:99vh;
+    }
+    
+    #side-post{
+      display:flex;
+      flex-direction:row;
+      /* visibility:hidden; */
+      position:absolute;
+      z-index:1;
+      height:100%;
+      background-color:#efefef;
+    }
+
+    .arrow-div{
+      display:flex;
+      cursor:pointer;
+      align-items:center;
+      height:100%;
+      font-size:30px;
+    }
+
+    .side-post-container{
+      width:0;
+      height:0;
+      transition:width 0.5s;
+    }
+    .side-post-container-active{
+      width:40vw;
+      height:100%;
+      transition:width 0.5s;
     }
   </style>
 
   <a href="{% url 'login' %}?next={{ request.path }}">login~</a>
-  <div id="naver-map"></div>
-  <div id="temp"></div>
+  <div class="container">
+    <div id="naver-map">
+      <div id="side-post">
+        <div class="side-post-container"></div>
+        <div class="arrow-div"></div>
+      </div>
+    </div>
+    
+  </div>
 {% endblock %}
 
 {% block javascript %}
+  <script type="module" src="{% static 'map/js/SidePost.js' %}"></script>
   <script type="module"> 
-    import ClusteredMap from "../static/map/js/ClusteredMap.js";  
+    import ClusteredMap from "../static/map/js/ClusteredMap.js";
+    import SidePost from "../static//map/js/SidePost.js";
+    const sidePost = new SidePost(document.getElementById("side-post"));
     const mukLogs = [];
     let logs = null;
 
     {% for muk_log in muk_logs %}
     logs = {
+      id:"{{ muk_log.id }}",
       title:"{{ muk_log.title }}",
       summary:"{{ muk_log.summary }}",
+      body:"{{ muk_log.body }}",
       latitude:"{{ muk_log.latitude }}",
       longitude:"{{ muk_log.longtitude }}",
       address:"{{ muk_log.address }}",
@@ -32,7 +77,7 @@
     {% endfor %}
 
     const staticUrl = "{{ STATIC_URL }}";
-    const clusteredMap = new ClusteredMap(staticUrl);
+    const clusteredMap = new ClusteredMap(staticUrl,sidePost);
     clusteredMap.render();
     clusteredMap.setClustering(mukLogs);
   </script>
