--- a/blog/templates/write.html
+++ b/blog/templates/write.html
@@ -31,6 +31,9 @@
         <input type="file" name="image" id="imageUpload" accept="media/*">
         <input type="submit" value="submit">
     </form>
+
+    <a href="{% url 'home' %}">맵홈으로 돌아가기</a>
+    <a href="{% url 'tempHome' %}">임시홈으로 돌아가기</a>
 </div> 
 {% endblock %}
 
