--- a/templates/mapTemplate.html
+++ b/templates/mapTemplate.html
@@ -9,6 +9,20 @@
     <title>Document</title>
   </head>
   <body>
+    {% if user.is_authenticated %}
+
+    <a href={% url 'write' %}>write~</a>
+    <a href={% url 'logout' %}?next={{request.path}}>logout~</a>
+    <span>{{request.user}}님</span>
+    <a href={% url 'mypage' user.username %}>마이페이지</a>
+
+    {% else %}
+
+    <a href={% url 'login' %}?next={{request.path}}>login~</a>
+    <a href={% url 'signup' %}?next={{request.path}}>회원가입 고!</a>
+    <p>로그인하여 글을 작성해주세요.</p>
+
+    {% endif %}
     <!-- body content -->
     {% block content %} 
     {% endblock %}
