--- a/map/templates/home.html
+++ b/map/templates/home.html
@@ -67,13 +67,13 @@
 
     {% for muk_log in muk_logs %}
     logs = {
-      id:"{{ muk_log.id }}",
-      title:"{{ muk_log.title }}",
-      summary:"{{ muk_log.summary }}",
-      body:"{{ muk_log.body }}",
-      latitude:"{{ muk_log.latitude }}",
-      longitude:"{{ muk_log.longtitude }}",
-      address:"{{ muk_log.address }}",
+      id:`{{ muk_log.id }}`,
+      title:`{{ muk_log.title }}`,
+      summary:`{{ muk_log.summary }}`,
+      body:`{{ muk_log.body }}`,
+      latitude:`{{ muk_log.latitude }}`,
+      longitude:`{{ muk_log.longtitude }}`,
+      address:`{{ muk_log.address }}`,
     }
     mukLogs.push(logs);
     {% endfor %}
