Add logmarker.css, sidePost

--- a/templates/mapTemplate.html
+++ b/templates/mapTemplate.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="{% static 'shared/css/mapTemplate.css' %}">
-    <title>Document</title>
+    {% block css %}
+    {% endblock %}
+    <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
     {% if user.is_authenticated %}
