--- a/accounts/templates/mypage.html
+++ b/accounts/templates/mypage.html
@@ -13,7 +13,6 @@
     <form action="{% url 'updateInfo' user.username %}" method="POST">
         {% csrf_token %}
         <h3>Username : <input type="text" name="username" value="{{ user }}" readonly></h3>
-        <h3>현재 Password : <input type="password" name="password" value="{{ user.password }}" readonly></h3>
         <h3>새 Password: <input type="password" name="newPassword"></h3>
         <h3>새 Password 확인: <input type="password" name="newPassword2"></h3>
         <input type="submit" name="submit" value="변경">
@@ -24,7 +23,7 @@
     {% endif %}
     <form action="{% url 'deleteInfo' %}" method="POST">
         {% csrf_token %}
-        <input type="submit" value="회원탈퇴">
+        <input type="submit" value="회원탈퇴" />
     </form>
     <br>
     <a href="{% url 'tempHome' %}">홈으로 돌아가기</a>
