--- a/blog/templates/edit.html
+++ b/blog/templates/edit.html
@@ -25,8 +25,8 @@
         <textarea cols="40" rows="10" name="body">{{ blog.body }}</textarea>
         <br>
         <br>
-        <input type="text" name="latitude" id="map-lat" value="{{ blog.latitude }}">
-        <input type="text" name="longitude" id="map-lng" value="{{ blog.longtitude }}">
+        <input type="text" name="lat" id="map-lat" value="{{ blog.latitude }}">
+        <input type="text" name="lng" id="map-lng" value="{{ blog.longtitude }}">
         <input type="file" name="image" id="imageUpload" accept="media/*">
         <input type="submit" value="submit">
     </form>
