--- a/map/templates/home.html
+++ b/map/templates/home.html
@@ -1,58 +1,25 @@
 {% extends 'mapTemplate.html' %}
 {% load static %}
 
+{% block title %}
+Home | Map
+{% endblock %}
+
+{% block css %}
+  <link rel="stylesheet" type="text/css" href="{% static 'map/css/home.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'map/css/LogMarker.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'map/css/SidePost.css' %}" />
+{% endblock %}
+
 {% block content %}
-<a href="{% url 'tempHome' %}">임시홈</a>
-
-  <style>
-    .container{
-      width:100%;
-      height:100%;
-    }
-    #naver-map {
-      width:99vw;
-      height:99vh;
-    }
-    
-    #side-post{
-      display:flex;
-      flex-direction:row;
-      /* visibility:hidden; */
-      position:absolute;
-      z-index:1;
-      height:100%;
-      background-color:#efefef;
-    }
-
-    .arrow-div{
-      display:flex;
-      cursor:pointer;
-      align-items:center;
-      height:100%;
-      font-size:30px;
-    }
-
-    .side-post-container{
-      width:0;
-      height:0;
-      transition:width 0.5s;
-    }
-    .side-post-container-active{
-      width:40vw;
-      height:100%;
-      transition:width 0.5s;
-    }
-  </style>
-
-  <a href="{% url 'login' %}?next={{ request.path }}">login~</a>
+  <a href="{% url 'tempHome' %}">임시홈</a>
   <div class="container">
     <div id="naver-map">
       <div id="side-post">
         <div class="side-post-container"></div>
-        <div class="arrow-div"></div>
+        <div class="arrow-div">></div>
       </div>
     </div>
-    
   </div>
 {% endblock %}
 
@@ -61,7 +28,8 @@
   <script type="module"> 
     import ClusteredMap from "../static/map/js/ClusteredMap.js";
     import SidePost from "../static/map/js/SidePost.js";
-    const sidePost = new SidePost(document.getElementById("side-post"));
+
+    const isLoggedIn = `{{ user.is_authenticated }}` === "True" ? true : false;
     const mukLogs = [];
     let logs = null;
 
@@ -74,12 +42,20 @@
       latitude:`{{ muk_log.latitude }}`,
       longitude:`{{ muk_log.longtitude }}`,
       address:`{{ muk_log.address }}`,
+      pubDate:`{{ muk_log.pub_date }}`,
+      {% if muk_log.thumbnail %}
+      thumbnail:`{{ muk_log.thumbnail.url }}`,
+      {% else %}
+      thumbnail:`/static/shared/image/default_food.jpg`,
+      thumbnailSide:`/static/image/default.jpg`,
+      {% endif %}
     }
     mukLogs.push(logs);
     {% endfor %}
-
+    console.log(mukLogs);
     const staticUrl = "{{ STATIC_URL }}";
-    const clusteredMap = new ClusteredMap(staticUrl,sidePost);
+    const sidePost = new SidePost(document.getElementById("side-post"),mukLogs,isLoggedIn);
+    const clusteredMap = new ClusteredMap(staticUrl,sidePost,isLoggedIn);
     clusteredMap.render();
     clusteredMap.setClustering(mukLogs);
   </script>
