--- a/map/static/map/css/home.css
+++ b/map/static/map/css/home.css
@@ -18,6 +18,16 @@
   background-color: white;
 }
 
+#side-post a {
+  color: black;
+  text-decoration: none;
+}
+
+#side-post a:hover {
+  color: #a9a9a9;
+  text-decoration: underline;
+}
+
 #side-post .arrow-div {
   display: flex;
   cursor: pointer;
