--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -12,21 +12,5 @@
         <input type="hidden" name="next" value="{{ next }}">
         <input type="submit" value="login" id="">
     </form>
+    <a href="{% url 'signup' %}?next={{request.path}}">회원가입 고</a>
 </div>
-
-<!-- <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-    </table>
-
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
-</form> -->
