finding the error of css in navbar

--- a/accounts/templates/mypage.html
+++ b/accounts/templates/mypage.html
@@ -1,4 +1,9 @@
 {% extends 'accountsBase.html'%}
+
+{% block title%}
+Muklog | Mypage
+{% endblock %}
+
 {% block content %}
 <div>
     <!-- {% if error %}
