--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -20,6 +20,7 @@
 <a href="{% url 'edit' detail.id %}">수정하기</a>
 <a href="{% url 'delete' detail.id %}">삭제하기</a>
 <a href="{% url 'tempHome' %}">임시홈으로 돌아가기</a>
+<a href="{% url '%}"></a>
 {% endblock %}
 
 {% block javascript %}
