--- a/blog/templates/tempHome.html
+++ b/blog/templates/tempHome.html
@@ -1,4 +1,12 @@
 {% extends 'accountsBase.html' %}
+{% load static %}
+
+{% block title %}
+Muklog | tempHome
+{% endblock %}
+
+{% block css %}
+{% endblock %}
 
 {% block content %}
 
