--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,3 +1,11 @@
+{% extends 'accountsBase.html'%}
+
+{% block title%}
+Muklog | SignUp
+{% endblock %}
+
+{% block content %}
+
 <div>
     {% if error %}
     {{error}}
@@ -15,3 +23,5 @@
         <input type="submit" value="sign up">
     </form>
 </div>
+
+{% endblock %}
