--- a/map/templates/home.html
+++ b/map/templates/home.html
@@ -12,7 +12,7 @@ Home | Map
 {% endblock %}
 
 {% block content %}
-  <a href="{% url 'tempHome' %}">임시홈</a>
+  <!-- <a href="{% url 'tempHome' %}">임시홈</a> -->
   <div class="container">
     <div id="naver-map">
       <div id="side-post">
