--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -4,32 +4,49 @@
 
 .posts {
     padding: 20px;
-    /* background: #fadec3; */
-    box-shadow: 0 2px 0 0 rgba(0,0,0,.2);
-    /* width: 100%; */
-    width: 768px;
-    margin-left: auto;
-    margin-right: auto;
+    /* width: 25%; */
+    /* margin-left: auto;
+    margin-right: auto; */
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 20px;
 }
 
 .thumbnail {
     padding: 30px;
+    max-height: 300px;
+    /* max-width: 300px; */
+    overflow: hidden;
+    margin-bottom: 20px;
 }
 
 .thumbnail img {
+    max-height: initial;
+    /* margin-left: -15%; */
     width: 100%;
 }
 
 .card {
     background-color: white;
-    padding: 30px;
-    /* margin-top: 20px; */
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow : 5px 5px 5px #b5b4b1;
 }
 
-.opening{
+.card div {
     text-align: center;
 }
 
-.others{
-    margin-top: 20px;
+.opening {
+    text-align: center;
 }
+
+.opening h1 {
+    margin-bottom: 10px;
+}
+
+.others {
+    margin-top: 20px;
+    margin-bottom: initial;
+}
+
