--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,30 +1,39 @@
 {% extends "mapTemplate.html" %}
 {% load static %}
 
+{% block css %}
+<link rel="stylesheet" href="{% static 'blog/css/detail.css'%}">
+{% endblock%}
+
 {% block content %}
+
+<div class="detail-page">
+  <h1>{{ detail.title }}</h1>
+  <p> {{ detail.pub_date }} </p>
+
+  {% if detail.thumbnail %}
+  <img src="{{detail.thumbnail.url}}" alt="thumbnail" width='600'>
+  {% else %}
+  <img src="{% static 'image/default.jpg' %}" alt="thumbnail" width='600'>
+  {% endif %}
+
+  <p> {{ detail.body }} </p>
+  <a href="{% url 'edit' detail.id %}">수정하기</a>
+  <a href="{% url 'delete' detail.id %}">삭제하기</a>
+  <a href="{% url 'tempHome' %}">임시홈으로 돌아가기</a>
+</div>
 <style>
-    #naver-map {
-      width: 500px;
-      height: 500px;
-    }
+  #naver-map {
+    width: 50%;
+    height: 500px;
+  }
 </style>
 <div id="naver-map"></div>
-<h1>{{ detail.title }}</h1>
-{% if detail.thumbnail %}
-<img src="{{detail.thumbnail.url}}" alt="thumbnail" width='600'>
-{% else %}
-<img src="{% static 'image/default.jpg' %}" alt="thumbnail" width='600'>
-{% endif %}
-<p> {{ detail.pub_date }} </p>
-<p> {{ detail.body }} </p>
-<a href="{% url 'edit' detail.id %}">수정하기</a>
-<a href="{% url 'delete' detail.id %}">삭제하기</a>
-<a href="{% url 'tempHome' %}">임시홈으로 돌아가기</a>
 {% endblock %}
 
 {% block javascript %}
 <script type="module">
-    import NaverMap from "/static/shared/js/NaverMap.js"
+  import NaverMap from "/static/shared/js/NaverMap.js"
 
     const staticUrl = "{{ STATIC_URL }}";
     const latitude = parseFloat("{{ detail.latitude }}");
