--- a/blog/templates/tempHome.html
+++ b/blog/templates/tempHome.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {% extends 'accountsBase.html' %}
 {% load static %}
 
@@ -11,17 +10,13 @@ Muklog | tempHome
 {% endblock %}
 
 {% block content %}
-=======
-{% extends 'accountsBase.html' %} {% load static %} {% block title %} Muklog |
-tempHome {% endblock %} {% block css %} {% endblock %} {% block content %}
->>>>>>> a976fb34dc5753383848ae897257201734ab9ed6
+<body style="background-color: #f5efe3;">
 
 <!-- {% if user.is_authenticated %} -->
 
 <!-- {% if error %}
     {{ error }}
     {% endif %} -->
-<<<<<<< HEAD
 
 <div class="posts">
   {% if blogs %}
@@ -38,37 +33,11 @@ tempHome {% endblock %} {% block css %} {% endblock %} {% block content %}
     </div>
     <p class="sum">{{ blog.summary }}</p>
     <div class="others">
-      <a href="{% url 'detail' blog.id %}">더보기</a>
-      <a href="{% url 'edit' blog.id %}">수정하기</a>
-      <a href="{% url 'delete' blog.id %}">삭제하기</a>
+      <a href="{% url 'detail' blog.id %}"><img src="{% static 'shared/image/more.png' %}" alt="more"></a>
+      <a href="{% url 'edit' blog.id %}"><img src="{% static 'shared/image/edit.png' %}" alt="edit"></a>
+      <a class="delete" href="{% url 'delete' blog.id %}"><img src="{% static 'shared/image/delete.png' %}" alt="delete"></a>
     </div>
-=======
-  {% if error %} {{ error }} {% endif %}
-  <div>
-    {% if blogs %} {% for blog in blogs %} {% if blog.thumbnail %}
-    <img src="{{ blog.thumbnail.url }}" alt="thumbnail" width="600" />
-    {% else %}
-    <img
-      src="{% static '/shared/image/default.jpg' %}"
-      width="600"
-      alt="default-thumbnail"
-    />
-    {% endif %}
-
-    <h1>{{ blog.title }}</h1>
-    <p>{{blog.pub_date}}</p>
-    <p>{{ blog.summary }}</p>
-    <a href="{% url 'detail' blog.id %}">더보기</a>
-    <a href="{% url 'edit' blog.id %}">수정하기</a>
-    <a href="{% url 'delete' blog.id %}">삭제하기</a>
-    <hr />
-    {% endfor %} {% else %}
-    <p>write를 눌러 첫 글을 등록해주세요.</p>
-
-    {% endif %}
->>>>>>> a976fb34dc5753383848ae897257201734ab9ed6
   </div>
-  <!-- <hr /> -->
   {% endfor %}
 
   {% else %}
@@ -79,4 +48,5 @@ tempHome {% endblock %} {% block css %} {% endblock %} {% block content %}
 <!-- {% endif %} -->
 
 
+</body>
 {% endblock %}
