--- a/accounts/templates/mypage.html
+++ b/accounts/templates/mypage.html
@@ -1,11 +1,17 @@
 {% extends 'accountsBase.html'%}
 
+{% load static %}
+
 {% block title%}
 Muklog | Mypage
 {% endblock %}
 
+{% block css %}
+<link rel="stylesheet" href="{% static 'blog/css/mypage.css'%}">
+{% endblock %}
+
 {% block content %}
-<div>
+<div class="mypage">
     <!-- {% if error %}
     {{ error }}
     {% endif %} -->
@@ -15,22 +21,34 @@ Muklog | Mypage
     {{ message }}
     {% endfor %}
     {% endif %}
+    <div class="usernameInfo">
+        <img src="{% static 'shared/image/mypageuser.png' %}" alt="user">
+        <h2>반갑습니다, {{ user }}님 !</h2>
+    </div>
     <form action="{% url 'updateInfo' user.username %}" method="POST">
         {% csrf_token %}
-        <h3>Username : <input type="text" name="username" value="{{ user }}" readonly></h3>
-        <h3>새 Password: <input type="password" name="newPassword"></h3>
-        <h3>새 Password 확인: <input type="password" name="newPassword2"></h3>
-        <input type="submit" name="submit" value="변경">
+        <div class="mypage-contents">
+            <input type="text" name="username" value="{{ user }}" hidden>
+            <h4>새 비밀번호 <input type="password" name="newPassword"></h4>
+            <h4>새 비밀번호 확인 <input type="password" name="newPassword2"></h4>
+            <input class="applyChange" type="submit" name="submit" value="변경">
+        </div>
     </form>
     <br>
     {% if error %}
     {{ error }}
     {% endif %}
-    <form action="{% url 'deleteInfo' %}" method="POST">
-        {% csrf_token %}
-        <input type="submit" value="회원탈퇴" />
-    </form>
-    <br>
-    <a href="{% url 'tempHome' %}">홈으로 돌아가기</a>
+    <div class="home-btn">
+        <a href="{% url 'tempHome' %}"><img src="{% static 'shared/image/mypagehome.png'%}" alt="home"></a>
+    </div>
+    <div class="deleteInfoBtn">
+        <form action="{% url 'deleteInfo' %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="회원탈퇴" />
+        </form>
+    </div>
 </div>
+<br>
+
+
 {% endblock %}
