--- a/map/static/shared/css/navbar.css
+++ b/map/static/shared/css/navbar.css
@@ -1,16 +1,24 @@
-.nav{
+@font-face {
+    font-family: 'MapoPeacefull';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoPeacefullA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.nav {
     /* top: 0;
     width: 100%;
     position: fixed; */
+    font-family: 'Pacifico', cursive;
     position: relative;
-    background-color:#fafafa;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    background-color: #fafafa;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
     overflow: hidden;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.nav-left a{
+.nav-left a {
     float: left;
     text-align: center;
     align-items: center;
@@ -18,21 +26,24 @@
     text-decoration: none;
 }
 
-.nav-right a{
+.nav-right a {
+    font-family: 'MapoPeacefull';
     float: right;
     font-weight: bolder;
     align-items: center;
     padding: 14px 16px;
-    height:100%;
+    height: 100%;
     text-align: center;
-    color:black;
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
 }
 
-.nav a:hover{
+.nav-left a:hover, .nav-right a:hover {
     background-color: #ddd;
 }
 
-.nav-center a{
+.nav-center a {
     height: 100%;
     padding: 14px 16px;
     float: none;
@@ -42,7 +53,9 @@
     transform: translate(-50%, -50%);
     text-decoration: none;
     font-weight: bolder;
-    color:black;
+    color: black;
 }
 
-
+.nav-center a:hover {
+    color: #f5be7f;
+}
