--- a/templates/accountsBase.html
+++ b/templates/accountsBase.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Leckerli+One&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'shared/css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'shared/css/navbar.css' %}">
     {% block css %}
@@ -46,10 +47,11 @@
 
         <div class="nav-right">
             <a href={% url 'login' %}?next={{request.path}}>
-                <img src="{% static 'shared/image/login.png' %}" alt="login">
+                <!-- <img src="{% static 'shared/image/login.png' %}" alt="login"> -->
+                로그인
             </a>
             <a href={% url 'signup' %}?next={{request.path}}>
-                JOIN
+                가입하기
             </a>
         </div>
 
